# wrv

./: Cargo.toml  README.md  input.css  package-lock.json  tailwind.config.js
.cargo/: config.toml
airspy/: Cargo.toml
airspy/src/: lib.rs
app/: Cargo.toml
app/src/: buttons.rs  components.rs  lib.rs  page.rs  todo.rs  utility.rs  wcanvas.rs
app/src/components/: page.rs  presentation.rs  usb.rs  wcanvas.rs
dsp/: Cargo.toml
gfx/: Cargo.toml
gfx/src/: lib.rs  main.rs  wcanvas.rs
notes/: design-notes.md
public/: gfx.js  gfx_bg.wasm
server/src/: fileserv.rs  main.rs
style/: main.scss  output.css
styles/: output.css
wrv_airspy/: Cargo.toml
wrv_airspy/src/: lib.rs
wrv_app/: Cargo.toml
wrv_app/src/: buttons.rs  components.rs  lib.rs  todo.rs
wrv_app/src/components/: buttons.rs  usb.rs  wcanvas.rs
wrv_dsp/: Cargo.toml
wrv_dsp/src/: iq_converter.rs  lib.rs
wrv_frontend/: Cargo.toml
wrv_frontend/src/: lib.rs
wrv_gfx/: Cargo.toml
wrv_gfx/src/: lib.rs  shader.wgsl  texture.rs  wcanvas.rs
wrv_server/: Cargo.toml
wrv_server/src/: fileserv.rs  main.rs
