[package]
name = "airspy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.67"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
thiserror.workspace = true
#serde_json = "1.0.111"
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
web-sys = { workspace = true, features = [
    "Usb", 
    "UsbDevice", 
    "UsbInterface",
    "UsbControlTransferParameters",
    "UsbDeviceRequestOptions",
    "UsbRecipient",
    "UsbRequestType",
    "UsbInTransferResult",
    "UsbOutTransferResult",
    "UsbTransferStatus",
]}
