[package]
name = "app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos-use = { version = "0.9.0", optional = false }

log.workspace = true
http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true
serde = "1.0.193"
gloo-timers = { version = "0.3.0", features = ["futures"] }
airspy = { path = "../airspy", optional = true }
gfx = { path = "../gfx", optional = true }
web-sys = { workspace = true, optional = true }

[features]
default = []
hydrate = [
    "leptos/hydrate", 
    "leptos_meta/hydrate", 
    "leptos_router/hydrate",
    "dep:airspy",
    "dep:gfx",
    #"dep:console_error_panic_hook",
    #"dep:winit",
    #"dep:wgpu",
    "dep:web-sys",
    #"dep:leptos-use",
    ]
ssr = [
    "leptos/ssr",
    "leptos-use/ssr",
    "leptos_meta/ssr", 
    "leptos_router/ssr", 
    "dep:leptos_axum"
]