[package]
name = "wrv_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wrv_airspy = { path = "../wrv_airspy", optional = true }
wrv_gfx = { path = "../wrv_gfx", optional = true }
wrv_dsp = { path = "../wrv_dsp", optional = true }

leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos-use = { workspace = true, optional = false }

cfg-if.workspace = true
http.workspace = true
log.workspace = true
serde = "1.0.193"
thiserror.workspace = true
web-sys.workspace = true
wasm-bindgen.workspace = true

[features]
default = []
hydrate = [
    "leptos/hydrate", 
    "leptos_meta/hydrate", 
    "leptos_router/hydrate",
    "dep:wrv_airspy",
    "dep:wrv_dsp",
    "dep:wrv_gfx",
    #"dep:console_error_panic_hook",
    #"dep:winit",
    #"dep:wgpu",
    #"dep:web-sys",
    #"dep:leptos-use",
    ]
ssr = [
    "leptos/ssr",
    "leptos-use/ssr",
    "leptos_meta/ssr", 
    "leptos_router/ssr", 
    "dep:leptos_axum"
]
